test: add minimal unit tests for app, list and service

--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "wtr",
+    "test:watch": "wtr --watch"
   },
   "dependencies": {
     "lit": "^3.3.1"
   },
   "devDependencies": {
+    "@open-wc/testing": "^4.0.0",
+    "@web/test-runner": "^0.20.0",
+    "@web/test-runner-puppeteer": "^0.18.0",
     "vite": "^7.2.4"
   }
 }
