--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "wtr",
+    "test": "wtr --coverage",
     "test:watch": "wtr --watch"
   },
   "dependencies": {
